--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,7 +6,7 @@
   font-size: 1.5rem;
   font-style: normal;
   color: white;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
