--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ h1 {
   line-height: 1.1;
   letter-spacing: 0.35rem;
   margin-left:9rem;
+  padding-top: 8rem;
 }
 
 p {
@@ -45,14 +46,8 @@ p {
   width: fit-content; /* Adjust width based on content */
 }
 
-.video {
-  width: 50%; /* Make video responsive */
-  height: 50%; /* Full height of the container */
-  object-fit: cover; /* Ensures the video covers the container area */
-}
-
 .text {
-  position: absolute;
+  /* position: absolute; */
   font-size: 1.3em;
   letter-spacing: 0.075rem;
 }
