--- a/src/index.css
+++ b/src/index.css
@@ -59,14 +59,8 @@ p {
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-.thumbnail img {
-  width: 75%;
-  max-width: 100%;
-  height: auto;
-  cursor: pointer;
-  transition: transform 0.2s ease;
+  width: 100vw; /* Stretch to full viewport width */
+  margin-left: calc(-50vw + 50%); /* Center full-width section inside normal content flow */
 }
 
 .thumbnail a {
@@ -74,21 +68,36 @@ p {
   text-decoration: none;
 }
 
+
 .caption {
   font-size: 1.2rem;
   margin-top: 1rem;
   letter-spacing: 0.075rem;
 }
 
+.thumbnail .vid {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
 .iframe-container {
+  padding-top: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.iframe-container a{
+  color: inherit;
+  text-decoration: none;
 }
 
 .bandcamp-iframe {
   border: 0;
-  width: 100%;
-  max-width: 700px; /* optional: control max width */
-  height: 120px;
+  width: 350px;
+  height: 470px;
   background-color: #000000;
 }
