--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
-/* Header styles */
+* {
+  box-sizing: border-box;
+}
 .header {
   font-family: 'Raleway';
   font-size: 1.5rem;
@@ -12,10 +14,17 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   padding: 1rem 0rem;
-  background: rgba(0, 0, 0, 0.5); /* Transparent background */
+  background: rgba(0, 0, 0, 0.5);
   z-index: 10;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 /* Header title */
@@ -31,14 +40,23 @@
 }
 
 .title a:hover {
-  color: #ffffff6c; /* Highlight color on hover */
+  color: #ffffff6c;
+}
+
+/* Hamburger icon */
+.hamburger {
+  display: none;
+  font-size: 1.8rem;
+  color: white;
+  cursor: pointer;
+  margin-right: 1rem;
 }
 
 /* Navigation menu */
 .menu ul {
   list-style: none;
   display: flex;
-  gap: 20px; /* Space between menu items */
+  gap: 20px;
   margin: 0;
   margin-right: 2rem;
   padding: 0;
@@ -47,7 +65,6 @@
 .menu li {
   display: inline-block;
   letter-spacing: 0.075rem;
-
 }
 
 .menu-link {
@@ -58,5 +75,55 @@
 }
 
 .menu-link:hover {
-  color: #ffffff6c; /* Highlight color on hover */
+  color: #ffffff6c;
+}
+
+/* Responsive for small screens */
+@media (max-width: 600px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem 0rem;
+  }
+
+  .hamburger {
+    display: block;
+    align-self: flex-end;
+  }
+
+  .menu {
+    display: none;
+    width: 100%;
+    text-align: right;
+  }
+
+  .menu.open {
+    display: block;
+  }
+
+  .menu ul {
+    flex-direction: column;
+    gap: 10px;
+    margin: 0;
+    padding: 0 1rem;
+    align-items: flex-end;
+    width: 100%;
+  }
+
+  .menu li {
+    display: block;
+    width: 100%;
+  }
+
+  .menu-link {
+    display: block;
+    width: 100%;
+    padding: 0.5rem 0;
+    text-align: right;
+  }
+
+  .title {
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+  }
 }
