--- a/src/components/header.css
+++ b/src/components/header.css
@@ -28,7 +28,6 @@
   width: 100%;
 }
 
-/* Title */
 .title {
   letter-spacing: 0.17rem;
   margin-left: 1rem;
@@ -44,7 +43,6 @@
   color: #ffffff6c;
 }
 
-/* Hamburger */
 .hamburger {
   color: white;
   cursor: pointer;
@@ -53,7 +51,6 @@
   margin-right: 1rem;
 }
 
-/* Menu */
 .menu {
   display: flex;
   margin-right: 2rem;
@@ -131,4 +128,11 @@
     margin-bottom: 0.5rem;
     margin-left: 1rem;
   }
+}
+
+.button-reset {
+  all: unset; /* resets all default styles */
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
