--- a/src/index.css
+++ b/src/index.css
@@ -69,9 +69,12 @@ p {
 
 .thumbnail .vid {
   display: block;
+  width: 100%;
   height: auto;
   object-fit: cover;
-  width: 100%;
+  border-radius: 0.5rem;
+  margin: 1.5rem auto;
+  max-width: 90%;
 }
 
 .thumbnail.headline {
@@ -109,6 +112,10 @@ p {
     margin-left: 3rem;
   }
 
+  .thumbnail .vid {
+    margin: 1.5rem auto;
+  }
+
   .container {
     padding: 0 3rem;
   }
@@ -128,8 +135,10 @@ p {
   }
 
   .thumbnail {
-    margin-left: 0;
-    padding-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 2rem;
     width: 100%;
   }
 
@@ -140,8 +149,8 @@ p {
   }
 
   .thumbnail .vid {
-    width: 100%;
-    height: auto;
+    margin: 1.5rem 1.5rem 0 1.5rem;
+    max-width: 95%;
   }
 
   .iframe-container {
