--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -77,11 +77,12 @@
 }
 
 .project .vid-full-width {
-  width: 100%;
-  height: auto;
   display: block;
-
+  width: calc(100% - 18rem); /* 9rem left + 9rem right */
+  max-width: 100%;
+  margin: 1.5rem auto 0 auto;
   border-radius: 0.5rem;
+  object-fit: cover;
 }
 
 @media (max-width: 1024px) {
@@ -105,6 +106,10 @@
   .project .media-grid {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 300px;
+  }
+
+  .project .vid-full-width {
+    width: calc(100% - 6rem);
   }
 }
 
@@ -138,5 +143,9 @@
 
   .project .media-grid .vertical-video {
     grid-row: auto;
+  }
+
+  .project .vid-full-width {
+    width: calc(100% - 3rem);
   }
 }
