--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -24,7 +24,6 @@
 .project p {
   font-size: 1.3rem;
   letter-spacing: 0.075rem;
-  /* margin: 1.5rem 6rem 0 9rem; */
   margin: 0 0 1rem 0;
 }
 
@@ -78,7 +77,7 @@
 
 .project .vid-full-width {
   display: block;
-  width: calc(100% - 18rem); /* 9rem left + 9rem right */
+  width: calc(100% - 18rem);
   max-width: 100%;
   margin: 1.5rem auto 0 auto;
   border-radius: 0.5rem;
