--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -1,5 +1,10 @@
+.project {
+  font-family: 'Roboto', sans-serif;
+}
+
 .project h1 {
-  font-size: 2.5rem;
+  font-family: 'Raleway', sans-serif;
+   font-size: 3.6rem;
   font-weight: bold;
   margin-bottom: 1rem;
 }
@@ -10,19 +15,14 @@
   gap: 2rem;
 }
 
-.project .column-left {
+.project .column-left, .column-right {
   font-size: 1.3em;
   letter-spacing: 0.075rem;
   margin: 1.5rem 6rem 0 9rem;
 }
 
-.project .column-right {
-  font-size: 1.3rem;
-  margin: 1.5rem 6rem 0 9rem;
-}
-
 .project p {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   letter-spacing: 0.075rem;
   margin: 0 0 1rem 0;
 }
@@ -30,6 +30,8 @@
 .project .meta-row {
   display: grid;
   grid-template-columns: minmax(140px, auto) minmax(150px, 1fr);
+  font-size: 1.5rem;
+  letter-spacing: 0.075rem;
   gap: 0.5rem;
   margin-bottom: 0.5rem;
   align-items: start;
@@ -84,52 +86,24 @@
   object-fit: cover;
 }
 
-@media (max-width: 1024px) {
-  .project h1 {
-    font-size: 2rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
-  }
-
-  .project .column-left,
-  .project .column-right,
-  .project .media-grid {
-    margin: 1.5rem 3rem 0 3rem;
-  }
-
-  .project .project-meta {
-    grid-template-columns: 1fr;
-    gap: 1.5rem;
-  }
-
-  .project .media-grid {
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 300px;
-  }
-
-  .project .vid-full-width {
-    width: calc(100% - 6rem);
-  }
-}
-
 @media (max-width: 600px) {
   .project h1 {
-    font-size: 1.6rem;
-    margin: 1rem;
+    font-size: 1.8rem;
+    margin: 1.5rem;
   }
 
   .project .column-left,
   .project .column-right,
   .project .media-grid {
-    margin: 1rem;
-    font-size: 1.1rem;
+    margin: 1.5rem;
   }
 
   .project p {
-    font-size: 1.1rem;
-    margin: 0 0 1rem 0;
+    font-size: 1.2rem;
   }
-
+  .project .meta-row {
+    font-size: 1.2rem;
+  }
   .project .project-meta {
     grid-template-columns: 1fr;
     gap: 1rem;
@@ -146,5 +120,60 @@
 
   .project .vid-full-width {
     width: calc(100% - 3rem);
+  }
+}
+
+@media (max-width: 1024px) {
+  .project h1 {
+    font-size: 3rem;
+    margin-left: 3rem;
+    padding-top: 6rem;
+  }
+
+  .project p {
+    font-size: 1.4rem;
+  }
+
+  .project .column-left,
+  .project .column-right,
+  .project .media-grid {
+    margin-left: 3rem;
+  }
+
+  .project .meta-row {
+    font-size:  1.4rem;
+  }
+
+  .project .project-meta {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+
+  .project .media-grid {
+    grid-auto-rows: 300px;
+  }
+
+  .project .vid-full-width {
+    width: calc(100% - 6rem);
+  }
+}
+
+@media (min-width: 2560px) {
+  .project h1 {
+    font-size: 5rem;
+  }
+
+  .project p {
+    font-size: 2rem;
+  }
+  .project .column-left,
+  .project .column-right,
+  .project .media-grid {
+    margin: 1.5rem 9rem 0 9rem;
+    font-size: 2rem;
+  }
+
+  .project .meta-row {
+    font-size: 2rem;
   }
 }
